# text_analyzer

./: Cargo.toml  Dockerfile  readme.md
.github/workflows/: tests.yml
src/: bow.rs  bow_data_mapper.rs  entities_updates_consumer.rs  lib.rs  main.rs  mongo_database.rs  neo4j_database.rs  neo4j_repository.rs  text_processor.rs  token_similarity.rs  tokenizer.rs
