[package]
name = "text_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
edit-distance = "2.1.3"
futures = "0.3.31"
kafka = "0.10.0"
mongodb = "3.1.1"
neo4rs = "0.8.0"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serial_test = "3.2.0"
tokio = "1.42.0"
